{
    "name": "TouchInputManager",
    "maps": [
        {
            "name": "Touch",
            "id": "e892bee3-0bfb-465b-a905-256b43143480",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "b3480386-0165-4673-b6d6-04689fa8d3d2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DoubleTap",
                    "type": "Button",
                    "id": "4fe104d2-df76-44eb-af30-1cd156807e8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "e78fcad9-9d60-40b3-9886-633037e0abdc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.4)",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "dcba1794-19b8-4484-b134-5f4436bb5fe5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "173c475f-a295-49c6-b225-11d4413970a4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerContact",
                    "type": "Button",
                    "id": "bee7831c-6ec6-4cc8-a30b-7ac7cce6f952",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberOfTouches",
                    "type": "Value",
                    "id": "6869b766-9114-4924-acb9-53b9252e73e1",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae7c1069-70a1-43d8-9024-193ffec6aad8",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13579524-5063-4388-b62a-d2409a1db6c1",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "686fddd5-7ef0-4607-84eb-d1a3d987d086",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a31479d-1754-4ca7-9fd0-4cc86a1d1cd9",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1f5ae05-9cc0-40f7-a066-612cc1bcd3e1",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93ff3eb7-dda2-4a9e-a6d4-0dde69a3bad1",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryFingerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ed5d00f-21cf-484e-9942-f719ffe754f6",
                    "path": "<Touchscreen>/displayIndex",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberOfTouches",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}